# GPlay

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
resources/: README.md
resources/data/: cube.obj.txt
src/: CMakeLists.txt
src/common/: README.md  event.h  glwindow.cpp  glwindow.h  image.h  log.cpp  log.h  utils.h
src/gassets/: meshdata.cpp  meshdata.h
src/gmath/: smatrix4.cpp  smatrix4.h  vec2.cpp  vec2.h  vec3.cpp  vec3.h
src/owls/: CMakeLists.txt  README.md  camera.cpp  camera.h  draw.cpp  draw.h  main.cpp  mathtools.cpp  mathtools.h  shading.cpp  shading.h  transforms.cpp  transforms.h  triangle.cpp  triangle.h  vattr.cpp  vattr.h
src/parrots/: CMakeLists.txt
src/rabbit/: CMakeLists.txt  README.md  aabb.cpp  aabb.h  bvh.cpp  bvh.h  camera.cpp  camera.h  draw.cpp  draw.h  hittable.cpp  hittable.h  main.cpp  material.cpp  material.h  mathtools.cpp  mathtools.h  noise.cpp  noise.h  object.cpp  object.h  ray.cpp  ray.h  texture.cpp  texture.h  vec3.cpp  vec3.h
test/: CMakeLists.txt
test/glm_common/: matrix.cpp  ppm.cpp
test/opengl_helloworld/: triangle.cpp  window.cpp
